workspaces/backend/manifests/kustomize/components/istio/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspaces-backend
spec:
  template:
    spec:
      containers:
      - name: workspaces-backend
