workspaces/backend/manifests/kustomize/components/istio/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: workspaces-backend
spec:
  action: ALLOW
  selector:
    matchLabels: {}
  rules:
  - {}
